# v2ray-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: aur-publish.yml  ci.yml  release.yml
.serena/: project.yml
assets/: v2ray-rs.desktop
crates/core/: Cargo.toml
crates/core/src/: backend.rs  geodata.rs  lib.rs  persistence.rs  routing_manager.rs
crates/core/src/config/: common.rs  mod.rs  singbox.rs  test_fixtures.rs  v2ray.rs  writer.rs  xray.rs
crates/core/src/models/: mod.rs  presets.rs  proxy.rs  routing.rs  settings.rs  subscription.rs  validation.rs
crates/process/: Cargo.toml
crates/process/src/: lib.rs  log_buffer.rs  manager.rs  pid.rs  state.rs
crates/process/tests/: lifecycle.rs
crates/subscription/: Cargo.toml
crates/subscription/src/: fetch.rs  lib.rs  manager.rs  parser.rs  ping.rs  update.rs
crates/subscription/tests/: e2e.rs
crates/tray/: Cargo.toml
crates/tray/src/: icons.rs  lib.rs  notification.rs  tray.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  i18n.rs  lib.rs  logs.rs  main.rs  preferences.rs  status_bar.rs  subscriptions.rs  wizard.rs
locale/: v2ray-rs.pot
locale/en_US/LC_MESSAGES/: v2ray-rs.mo  v2ray-rs.po
locale/ru_RU/LC_MESSAGES/: v2ray-rs.mo  v2ray-rs.po
openspec/changes/archive/2026-02-10-backend-detection/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-10-backend-detection/specs/backend-detection/: spec.md
openspec/changes/archive/2026-02-10-config-generation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-10-core-data-models/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-10-core-data-models/specs/app-persistence/: spec.md
openspec/changes/archive/2026-02-10-core-data-models/specs/proxy-node-models/: spec.md
openspec/changes/archive/2026-02-10-main-window-ui/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-10-process-management/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-10-routing-rule-manager/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-10-routing-rule-manager/specs/routing-rules/: spec.md
openspec/changes/archive/2026-02-10-subscription-management/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-10-system-tray-integration/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-10-ui-polish-headerbar-removal/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-10-ui-polish-lists-and-expanders/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-10-ui-polish-lists-and-expanders/specs/ui-lists/: spec.md
openspec/changes/archive/2026-02-11-ui-polish-statusbar-and-logs/: design.md  proposal.md  tasks.md
openspec/specs/config-generator/: spec.md
openspec/specs/geodata-management/: spec.md
openspec/specs/main-window/: spec.md
openspec/specs/onboarding-wizard/: spec.md
openspec/specs/process-lifecycle/: spec.md
openspec/specs/subscription-import/: spec.md
openspec/specs/subscription-update/: spec.md
openspec/specs/system-tray/: spec.md
openspec/specs/ui-chrome/: spec.md
openspec/specs/ui-statusbar-logs/: spec.md
pkg/archlinux/: PKGBUILD
