[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.3.3"
edition = "2024"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
uuid = { version = "1", features = ["v4", "serde"] }
directories = "6"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
ipnet = { version = "2", features = ["serde"] }
base64 = "0.22"
url = "2"
reqwest = { version = "0.13", features = ["rustls"], default-features = false }
tokio = { version = "1", features = ["full"] }
log = "0.4"
nix = { version = "0.31", features = ["signal", "process"] }
relm4 = { version = "0.10", features = ["gnome_48", "libadwaita"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
resvg = "0.47"
v2ray-rs-core = { path = "crates/core" }
v2ray-rs-process = { path = "crates/process" }
v2ray-rs-subscription = { path = "crates/subscription" }
