[package]
name = "v2ray-rs-subscription"
version.workspace = true
edition.workspace = true

[dependencies]
v2ray-rs-core.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
url.workspace = true
reqwest.workspace = true
rustls.workspace = true
tokio.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
log.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util", "macros"] }
v2ray-rs-core = { workspace = true, features = ["test-utils"] }
